--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.1",
+    "sonner": "^1.3.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
