--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
