--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "^1.7.18",
+    "@next/bundle-analyzer": "^14.0.4",
     "@prisma/client": "^5.8.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.2.0",
     "formik": "^2.4.5",
-    "howler": "^2.2.4",
-    "lucide-react": "^0.303.0",
+    "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.1",
+    "sharp": "^0.33.2",
     "sonner": "^1.3.1",
-    "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.3",
@@ -32,7 +32,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/howler": "^2.2.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,7 +40,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.8.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
