--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@next/bundle-analyzer": "^14.0.4",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.8.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "formik": "^2.4.5",
+    "howler": "^2.2.4",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
-    "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
-    "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -40,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
