--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.4.5",
     "howler": "^2.2.4",
     "lucide-react": "^0.312.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
