--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.0.0",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
