--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "resend": "^3.0.0",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
